--- a/pkg/ui/templates/index_secret_created_card.gohtml
+++ b/pkg/ui/templates/index_secret_created_card.gohtml
@@ -1,9 +1,10 @@
 {{- /*gotype: github.com/pudottapommin/onetime-secrets-service/pkg/ui.CardSecretCreated*/ -}}
 {{define "index/htmx/secret_created_card.html"}}
     <hx-partial hx-target="#secret-card" hx-swap="outerHTML">
-        <article id="secret-created" class="@lg:max-w-md mx-auto dark:bg-gray-900 rounded-lg shadow-lg p-8">
-            <header class="pb-2 border-b dark:border-gray-700"><h1 class="text-4xl font-medium">Your secret was
-                    created</h1></header>
+        <article id="secret-created" class="card">
+            <header class="card-header">
+                <h1>Your secret was created</h1>
+            </header>
             <div x-data="{
                 url: '{{.Url}}',
                 _copied: false,
@@ -17,7 +18,7 @@
                 }
             }">
                 <div>
-                    {{/*                    <label for="secret" class="block text-sm/6 font-medium text-gray-900 dark:text-white">Secret</label>*/}}
+                    {{/*                    <label for="secret" >Secret</label>*/}}
                     <div class="mt-2">
                         <textarea aria-label="Secret link"
                                   class="max-h-96 min-h-24 select-all block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6 dark:bg-white/5 dark:text-white dark:outline-white/10 dark:placeholder:text-gray-500 dark:focus:outline-indigo-500"
@@ -33,9 +34,7 @@
                        class="rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-xs inset-ring inset-ring-gray-300 hover:bg-gray-50 dark:bg-white/10 dark:text-white dark:shadow-none dark:inset-ring-white/5 dark:hover:bg-white/20">
                         New
                     </a>
-                    <button @click="_copy()"
-                            :disabled="_copied"
-                            class="inline-flex gap-2 items-center justify-center rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 dark:bg-indigo-500 dark:shadow-none dark:hover:bg-indigo-400 dark:focus-visible:outline-indigo-500">
+                    <button @click="_copy()" :disabled="_copied" class="btn-primary">
                         <span x-show="!_copied" class="inline-flex gap-2 items-center justify-center">
                             Copy to clipboard
                             <svg viewBox="0 0 24 24" class="size-5">
