--- a/pkg/ui/templates/index_secret_form.gohtml
+++ b/pkg/ui/templates/index_secret_form.gohtml
@@ -1,7 +1,7 @@
 {{- /*gotype: github.com/pudottapommin/onetime-secrets-service/pkg/ui.FormModel*/ -}}
 {{define "index/secret_form.html"}}
-    <article id="secret-card" class="@lg:max-w-md mx-auto dark:bg-gray-900 rounded-lg shadow-lg p-8">
-        <header class="pb-2 border-b dark:border-gray-700"><h1 class="text-4xl font-medium">👀 New secret</h1></header>
+    <article id="secret-card" class="card">
+        <header class="card-header"><h1>👀 New secret</h1></header>
         <form id="secret-form"
               hx-put="/"
               hx-disable="#secret-submit"
@@ -12,7 +12,7 @@
                 <div id="form-errors"></div>
                 {{csrfInput .}}
                 <div>
-                    <label for="secret" class="block text-sm/6 font-medium text-gray-900 dark:text-white">Secret</label>
+                    <label for="secret">Secret</label>
                     <div class="mt-2">
                         <textarea id="secret" name="secret" rows="4"
                                   placeholder="Fill in secret which you would like to share 🤫"
@@ -23,8 +23,7 @@
                     </div>
                 </div>
                 <div>
-                    <label for="passphrase"
-                           class="block text-sm/6 font-medium text-gray-900 dark:text-white">Password</label>
+                    <label for="passphrase">Password</label>
                     <div class="mt-2 grid grid-cols-1 relative">
                         <input id="passphrase"
                                name="passphrase"
@@ -59,8 +58,7 @@
 
                 <div class="grid grid-cols-2 gap-4">
                     <div>
-                        <label for="expiration"
-                               class="block text-sm/6 font-medium text-gray-900 dark:text-white">Expiration</label>
+                        <label for="expiration">Expiration</label>
                         <div class="mt-2 grid grid-cols-1">
                             <select x-model="expiration" name="expiration" id="expiration"
                                     class="col-start-1 row-start-1 w-full appearance-none rounded-md bg-white py-1.5 pr-8 pl-3 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 focus-visible:outline-2 focus-visible:-outline-offset-2 focus-visible:outline-indigo-600 sm:text-sm/6 dark:bg-white/5 dark:text-white dark:outline-white/10 dark:*:bg-gray-800 dark:focus-visible:outline-indigo-500">
@@ -77,8 +75,7 @@
                         </div>
                     </div>
                     <div>
-                        <label for="maxViews"
-                               class="block text-sm/6 font-medium text-gray-900 dark:text-white">Max views</label>
+                        <label for="maxViews">Max views</label>
                         <div class="mt-2 grid grid-cols-1">
                             <input type="text"
                                    inputmode="numeric"
@@ -97,8 +94,7 @@
                     </div>
                 </div>
 
-                <button id="secret-submit" type="submit"
-                        class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 dark:bg-indigo-500 dark:shadow-none dark:hover:bg-indigo-400 dark:focus-visible:outline-indigo-500">
+                <button id="secret-submit" type="submit" class="btn-primary">
                         <span class="htmx-indicator">
                             <span class="inline-flex items-center gap-2">
                               <svg class="h-4 w-4 animate-spin" viewBox="0 0 24 24" aria-hidden="true">
