--- a/pkg/ui/templates/secret_decrypted.gohtml
+++ b/pkg/ui/templates/secret_decrypted.gohtml
@@ -2,7 +2,9 @@
 {{define "secret/htmx/secret_decrypted.html"}}
     <hx-partial hx-target="#secret-detail" hx-swap="innerHTML">
 {{/*        <article id="secret-detail" class="@lg:max-w-md mx-auto dark:bg-gray-900 rounded-lg shadow-lg p-8">*/}}
-            <header><h1 class="text-4xl font-medium">Your secure message is shown below.</h1></header>
+            <header class="card-header">
+                <h1>Your secure message is shown below.</h1>
+            </header>
             <div x-data="{
                 secret: '{{.Secret}}',
                 _copied: false,
@@ -16,7 +18,7 @@
                 }
             }">
                 <div class="mt-6">
-                    {{/*                    <label for="secret" class="block text-sm/6 font-medium text-gray-900 dark:text-white">Secret</label>*/}}
+                    {{/*                    <label for="secret">Secret</label>*/}}
                     <div class="mt-2">
                         <textarea aria-label="Secret"
                                   class="max-h-96 min-h-24 select-all block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6 dark:bg-white/5 dark:text-white dark:outline-white/10 dark:placeholder:text-gray-500 dark:focus:outline-indigo-500"
