--- a/pkg/ui/templates/index_auth_form.gohtml
+++ b/pkg/ui/templates/index_auth_form.gohtml
@@ -1,7 +1,7 @@
 {{- /*gotype: github.com/pudottapommin/onetime-secrets-service/pkg/ui.PageIndex*/ -}}
 {{define "index/auth_form.html"}}
-    <article id="auth-card" class="@lg:max-w-md mx-auto dark:bg-gray-900 rounded-lg shadow-lg p-8">
-        <header><h1 class="text-4xl font-medium">Authenticate</h1></header>
+    <article id="auth-card" class="card">
+        <header class="card-header"><h1>Authenticate</h1></header>
         <form id="login-form"
               hx-post="/authenticate"
               hx-disable="#login-submit"
@@ -12,8 +12,7 @@
                 <div id="form-errors"></div>
                 {{csrfInput .FormModel}}
                 <div>
-                    <label for="username"
-                           class="block text-sm/6 font-medium text-gray-900 dark:text-white">Username</label>
+                    <label for="username">Username</label>
                     <div class="mt-2 grid grid-cols-1">
                         <input id="username"
                                name="username"
@@ -31,8 +30,7 @@
                 </div>
 
                 <div>
-                    <label for="password"
-                           class="block text-sm/6 font-medium text-gray-900 dark:text-white">Password</label>
+                    <label for="password">Password</label>
                     <div class="mt-2 grid grid-cols-1 relative">
                         <input id="password"
                                name="password"
@@ -66,9 +64,7 @@
                     </div>
                 </div>
 
-                <button id="login-submit" type="submit"
-                        class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 dark:bg-indigo-500 dark:shadow-none dark:hover:bg-indigo-400 dark:focus-visible:outline-indigo-500"
-                        x-ref="submitBtn">
+                <button id="login-submit" type="submit" class="btn-primary" x-ref="submitBtn">
                         <span class="htmx-indicator">
                             <span class="inline-flex items-center gap-2">
                               <svg class="h-4 w-4 animate-spin" viewBox="0 0 24 24" aria-hidden="true">
