--- a/pkg/ui/templates/secret_page.gohtml
+++ b/pkg/ui/templates/secret_page.gohtml
@@ -4,23 +4,22 @@
 {{end}}
 
 {{define "content"}}
-    <article id="secret-detail" class="@lg:max-w-md mx-auto dark:bg-gray-900 rounded-lg shadow-lg p-8">
+    <article id="secret-detail" class="card">
         {{if .NotFound}}
-            <header><h1 class="text-4xl font-medium">No secret to be viewed.</h1></header>
-            <div>
-                <p>Requested secret has been viewed or expired.</p>
+            <header class="card-header"><h1 class="text-red-400">Nothing found</h1></header>
+            <div class="mt-6 text-lg text-gray-400 font-bold" x-data="{}">
+                <p>No active secret found at this address.</p>
                 {{/*                <a href="/">Create new secret</a>*/}}
             </div>
         {{else}}
-            <header><h1 class="text-4xl font-medium">Your secure message is ready.</h1></header>
+            <header class="card-header"><h1>Your secure message is ready.</h1></header>
             <div class="grid gap-y-4" x-data="{passphrase: '', showPassphrase: false}">
                 {{if .Passphrase}}
                     <form class="grid gap-4">
                         <div id="form-errors"></div>
                         {{csrfInput .FormModel}}
                         <div>
-                            <label for="passphrase"
-                                   class="block text-sm/6 font-medium text-gray-900 dark:text-white">Passphrase</label>
+                            <label for="passphrase">Passphrase</label>
                             <div class="mt-2 grid grid-cols-1 relative">
                                 <input id="passphrase"
                                        name="passphrase"
@@ -55,7 +54,7 @@
                             </div>
                         </div>
 
-                        <button class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 dark:bg-indigo-500 dark:shadow-none dark:hover:bg-indigo-400 dark:focus-visible:outline-indigo-500"
+                        <button class="btn-primary"
                                 hx-post="{{.Url}}"
                                 hx-indicator="this"
                                 hx-disabled="this">
@@ -78,16 +77,18 @@
                     </form>
                 {{else}}
                     {{if eq .ViewsLeft 1}}
-                        <p class="my-4 text-gray-300">Careful: we will only show it once.</p>
+                        <p class="my-4 text-yellow-700">Careful: we will only show it <strong>once</strong>.</p>
                     {{else}}
-                        <p class="my-4 text-gray-300">This secret can be viewed
+                        <p class="my-4 text-yellow-700">This secret can be viewed
                             <ins>{{.ViewsLeft}}</ins>
                             times
                         </p>
                     {{end}}
+                    {{csrfInput .FormModel}}
                     <button id="secret-show"
-                            class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 dark:bg-indigo-500 dark:shadow-none dark:hover:bg-indigo-400 dark:focus-visible:outline-indigo-500"
+                            class="btn-primary"
                             hx-post="{{.Url}}"
+                            hx-include='input[name="{{.FormModel.CsrfField}}"]'
                             hx-indicator="this"
                             hx-disabled="this">
                         <span class="htmx-indicator">
