files upload and storage

--- a/pkg/ui/templates/index_secret_form.gohtml
+++ b/pkg/ui/templates/index_secret_form.gohtml
@@ -4,6 +4,7 @@
         <header class="card-header"><h1>👀 New secret</h1></header>
         <form id="secret-form"
               hx-put="/"
+              hx-encoding="multipart/form-data"
               hx-disable="#secret-submit"
               hx-indicatpr="#secret-submit"
               @keydown.enter="$refs.submitBtn.click()"
@@ -92,6 +93,9 @@
                             </svg>
                         </div>
                     </div>
+                </div>
+                <div>
+                    <input name="files" type="file" multiple />
                 </div>
 
                 <button id="secret-submit" type="submit" class="btn-primary">
