--- a/pkg/ui/templates/layout.gohtml
+++ b/pkg/ui/templates/layout.gohtml
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="{{asset "app.min.css"}}">
         <link rel="stylesheet" href="{{asset "inter.min.css"}}">
 
-        <script type="module" src="{{asset "htmx.min.js"}}"></script>
+        <script src="{{asset "htmx.min.js"}}"></script>
         <script type="module" src="{{asset "alpinejs.min.js"}}"></script>
 
         <title>Onetime secret service</title>
