--- a/pkg/ui/templates/secret_page.gohtml
+++ b/pkg/ui/templates/secret_page.gohtml
@@ -4,7 +4,13 @@
 {{end}}
 
 {{define "content"}}
-    <article id="secret-detail" class="card">
+    <article id="secret-detail" class="card"
+             hx-post="{{.Url}}"
+             hx-trigger="click #secret-show"
+             hx-include='input[name="{{.FormModel.CsrfField}}"]'
+             hx-indicator="#secret-show"
+             hx-disabled="#secret-show"
+    >
         {{if .NotFound}}
             <header class="card-header"><h1 class="text-red-400">Nothing found</h1></header>
             <div class="mt-6 text-lg text-gray-400 font-bold" x-data="{}">
@@ -85,12 +91,7 @@
                         </p>
                     {{end}}
                     {{csrfInput .FormModel}}
-                    <button id="secret-show"
-                            class="btn-primary"
-                            hx-post="{{.Url}}"
-                            hx-include='input[name="{{.FormModel.CsrfField}}"]'
-                            hx-indicator="this"
-                            hx-disabled="this">
+                    <button id="secret-show" class="btn-primary" >
                         <span class="htmx-indicator">
                             <span class="inline-flex items-center gap-2">
                               <svg class="h-4 w-4 animate-spin" viewBox="0 0 24 24" aria-hidden="true">
