--- a/pkg/ui/templates/index_auth_form.gohtml
+++ b/pkg/ui/templates/index_auth_form.gohtml
@@ -12,7 +12,7 @@
                 <div id="form-errors"></div>
                 {{csrfInput .FormModel}}
                 <div>
-                    <label for="username">Username</label>
+                    <label class="form-label" for="username">Username</label>
                     <div class="mt-2 grid grid-cols-1">
                         <input id="username"
                                name="username"
@@ -30,7 +30,7 @@
                 </div>
 
                 <div>
-                    <label for="password">Password</label>
+                    <label class="form-label" for="password">Password</label>
                     <div class="mt-2 grid grid-cols-1 relative">
                         <input id="password"
                                name="password"
