--- a/pkg/ui/templates/secret_page.gohtml
+++ b/pkg/ui/templates/secret_page.gohtml
@@ -4,20 +4,22 @@
 {{end}}
 
 {{define "content"}}
-    <article id="secret-detail" class="card"
-             hx-post="{{.Url}}"
-             hx-trigger="click #secret-show"
-             hx-include='input[name="{{.FormModel.CsrfField}}"]'
-             hx-indicator="#secret-show"
-             hx-disabled="#secret-show"
-    >
-        {{if .NotFound}}
+    {{if .NotFound}}
+        <article id="secret-detail" class="card">
             <header class="card-header"><h1 class="text-red-400">Nothing found</h1></header>
             <div class="mt-6 text-lg text-gray-400 font-bold" x-data="{}">
                 <p>No active secret found at this address.</p>
                 {{/*                <a href="/">Create new secret</a>*/}}
             </div>
-        {{else}}
+        </article>
+    {{else}}
+        <article id="secret-detail" class="card"
+                 hx-post="{{.Url}}"
+                 hx-trigger="click from:#secret-show once"
+                 hx-include='input[name="{{.FormModel.CsrfField}}"]'
+                 hx-indicator="#secret-show"
+                 hx-disabled="#secret-show"
+        >
             <header class="card-header"><h1>Your secure message is ready.</h1></header>
             <div class="grid gap-y-4" x-data="{passphrase: '', showPassphrase: false}">
                 {{if .Passphrase}}
@@ -25,7 +27,7 @@
                         <div id="form-errors"></div>
                         {{csrfInput .FormModel}}
                         <div>
-                            <label for="passphrase">Passphrase</label>
+                            <label class="form-label" for="passphrase">Passphrase</label>
                             <div class="mt-2 grid grid-cols-1 relative">
                                 <input id="passphrase"
                                        name="passphrase"
@@ -49,7 +51,8 @@
                                               d="M.664 10.59a1.651 1.651 0 0 1 0-1.186A10.004 10.004 0 0 1 10 3c4.257 0 7.893 2.66 9.336 6.41.147.381.146.804 0 1.186A10.004 10.004 0 0 1 10 17c-4.257 0-7.893-2.66-9.336-6.41ZM14 10a4 4 0 1 1-8 0 4 4 0 0 1 8 0Z"
                                               clip-rule="evenodd"/>
                                     </svg>
-                                    <svg x-show="showPassphrase" viewBox="0 0 20 20" fill="currentColor" class="size-5"
+                                    <svg x-show="showPassphrase" viewBox="0 0 20 20" fill="currentColor"
+                                         class="size-5"
                                          x-cloak>
                                         <path fill-rule="evenodd"
                                               d="M3.28 2.22a.75.75 0 0 0-1.06 1.06l14.5 14.5a.75.75 0 1 0 1.06-1.06l-1.745-1.745a10.029 10.029 0 0 0 3.3-4.38 1.651 1.651 0 0 0 0-1.185A10.004 10.004 0 0 0 9.999 3a9.956 9.956 0 0 0-4.744 1.194L3.28 2.22ZM7.752 6.69l1.092 1.092a2.5 2.5 0 0 1 3.374 3.373l1.091 1.092a4 4 0 0 0-5.557-5.557Z"
@@ -60,10 +63,7 @@
                             </div>
                         </div>
 
-                        <button class="btn-primary"
-                                hx-post="{{.Url}}"
-                                hx-indicator="this"
-                                hx-disabled="this">
+                        <button id="secret-show" class="btn-primary">
                         <span class="htmx-indicator">
                             <span class="inline-flex items-center gap-2">
                                   <svg class="h-4 w-4 animate-spin" viewBox="0 0 24 24" aria-hidden="true">
@@ -91,7 +91,7 @@
                         </p>
                     {{end}}
                     {{csrfInput .FormModel}}
-                    <button id="secret-show" class="btn-primary" >
+                    <button id="secret-show" class="btn-primary">
                         <span class="htmx-indicator">
                             <span class="inline-flex items-center gap-2">
                               <svg class="h-4 w-4 animate-spin" viewBox="0 0 24 24" aria-hidden="true">
@@ -108,6 +108,6 @@
                     </button>
                 {{end}}
             </div>
-        {{end}}
-    </article>
+        </article>
+    {{end}}
 {{end}}
