--- a/pkg/ui/templates/layout.gohtml
+++ b/pkg/ui/templates/layout.gohtml
@@ -5,9 +5,28 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="color-scheme" content="light dark">
-        <link rel="apple-touch-icon" sizes="180x180" href="{{asset "apple-touch-icon.png"}}">
-        <link rel="icon" type="image/png" sizes="32x32" href="{{asset "favicon-32x32.png"}}">
+
+        <link rel="apple-touch-icon" sizes="57x57" href="{{asset "favicon-57x57.png"}}">
+        <link rel="apple-touch-icon" sizes="60x60" href="{{asset "favicon-60x60.png"}}">
+        <link rel="apple-touch-icon" sizes="72x72" href="{{asset "favicon-72x72.png"}}">
+        <link rel="apple-touch-icon" sizes="76x76" href="{{asset "favicon-76x76.png"}}">
+        <link rel="apple-touch-icon" sizes="114x114" href="{{asset "favicon-114x114.png"}}">
+        <link rel="apple-touch-icon" sizes="120x120" href="{{asset "favicon-120x120.png"}}">
+        <link rel="apple-touch-icon" sizes="144x144" href="{{asset "favicon-144x144.png"}}">
+        <link rel="apple-touch-icon" sizes="152x152" href="{{asset "favicon-152x152.png"}}">
+        <link rel="apple-touch-icon" sizes="180x180" href="{{asset "favicon-180x180.png"}}">
+        <link rel="icon" type="image/svg+xml" href="{{asset "favicon.svg"}}">
         <link rel="icon" type="image/png" sizes="16x16" href="{{asset "favicon-16x16.png"}}">
+        <link rel="icon" type="image/png" sizes="32x32" href="{{asset "favicon-32x32.png"}}">
+        <link rel="icon" type="image/png" sizes="96x96" href="{{asset "favicon-96x96.png"}}">
+        <link rel="icon" type="image/png" sizes="192x192" href="{{asset "favicon-192x192.png"}}">
+        <link rel="shortcut icon" type="image/x-icon" href="{{asset "favicon.ico"}}">
+        <link rel="icon" type="image/x-icon" href="{{asset "favicon.ico"}}">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-TileImage" content="{{asset "favicon-144x144.png"}}">
+        <meta name="msapplication-config" content="{{asset "browserconfig.xml"}}">
+        <link rel="manifest" href="{{asset "manifest.json"}}">
+        <meta name="theme-color" content="#ffffff">
 
         <link rel="stylesheet" href="{{asset "app.min.css"}}">
         <link rel="stylesheet" href="{{asset "inter.min.css"}}">
