fix: passphrase not included in unlocking secret

--- a/pkg/ui/templates/secret_page.gohtml
+++ b/pkg/ui/templates/secret_page.gohtml
@@ -16,14 +16,14 @@
         <article id="secret-detail" class="card"
                  hx-post="{{.Url}}"
                  hx-trigger="click from:#secret-show once"
-                 hx-include='input[name="{{.FormModel.CsrfField}}"]'
+                 hx-include='input[name="{{.FormModel.CsrfField}}"],input[name="passphrase"]'
                  hx-indicator="#secret-show"
                  hx-disabled="#secret-show"
         >
             <header class="card-header"><h1>Your secure message is ready.</h1></header>
             <div class="grid gap-y-4" x-data="{passphrase: '', showPassphrase: false}">
                 {{if .Passphrase}}
-                    <form class="grid gap-4">
+                    <div class="grid gap-4">
                         <div id="form-errors"></div>
                         {{csrfInput .FormModel}}
                         <div>
@@ -64,23 +64,21 @@
                         </div>
 
                         <button id="secret-show" class="btn-primary">
-                        <span class="htmx-indicator">
-                            <span class="inline-flex items-center gap-2">
-                                  <svg class="h-4 w-4 animate-spin" viewBox="0 0 24 24" aria-hidden="true">
-                                    <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor"
-                                            stroke-width="4"
-                                            fill="none"></circle>
-                                    <path class="opacity-75" fill="currentColor"
-                                          d="M4 12a8 8 0 0 1 8-8v4a4 4 0 0 0-4 4H4z"></path>
-                                  </svg>
-                                  <span>Please wait...</span>
+                            <span class="htmx-indicator">
+                                <span class="inline-flex items-center gap-2">
+                                      <svg class="h-4 w-4 animate-spin" viewBox="0 0 24 24" aria-hidden="true">
+                                        <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor"
+                                                stroke-width="4"
+                                                fill="none"></circle>
+                                        <path class="opacity-75" fill="currentColor"
+                                              d="M4 12a8 8 0 0 1 8-8v4a4 4 0 0 0-4 4H4z"></path>
+                                      </svg>
+                                      <span>Please wait...</span>
+                                </span>
                             </span>
-                        </span>
-
                             <span class="not-htmx-indicator">Click to reveal</span>
                         </button>
-
-                    </form>
+                    </div>
                 {{else}}
                     {{if eq .ViewsLeft 1}}
                         <p class="my-4 text-yellow-700">Careful: we will only show it <strong>once</strong>.</p>
