fix: fixed sending of decrypt form and showing multiline secrets

--- a/pkg/ui/templates/secret_decrypted.gohtml
+++ b/pkg/ui/templates/secret_decrypted.gohtml
@@ -5,7 +5,7 @@
             <h1>Your secure message is shown below.</h1>
         </header>
         <div x-data="{
-                secret: '{{.Secret}}',
+                secret: {{.Secret | json}},
                 _copied: false,
                 _copy() {
                     navigator.clipboard.writeText(this.secret).then(() => {
