--- a/pkg/ui/templates/secret_page.gohtml
+++ b/pkg/ui/templates/secret_page.gohtml
@@ -15,10 +15,10 @@
     {{else}}
         <article id="secret-detail" class="card"
                  hx-post="{{.Url}}"
-                 hx-trigger="click from:#secret-show once"
-                 hx-include='input[name="{{.FormModel.CsrfField}}"],input[name="passphrase"]'
+                 hx-trigger="click from:#secret-show once, keyup[key=='Enter'] from:#passphrase"
+                 hx-include='input[name="{{.FormModel.CsrfField}}"],#passphrase'
                  hx-indicator="#secret-show"
-                 hx-disabled="#secret-show"
+                 hx-disable='#secret-show, #passphrase'
         >
             <header class="card-header"><h1>Your secure message is ready.</h1></header>
             <div class="grid gap-y-4" x-data="{passphrase: '', showPassphrase: false}">
